force-app/main/default/objects/Quota__c/Quota__c.object-meta.xml
<CustomObject>
    <label>Quota</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Quota Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>