force-app/main/default/objects/Quota__c/fields/Num_of_Quota_Periods__c.field-meta.xml
<CustomField>
    <fullName>Num_of_Quota_Periods__c</fullName>
    <formula>IF( 

YTD_Quota_End_Period__c &gt;= YTD_Quota_Start_Period__c, (YTD_Quota_End_Period__c - YTD_Quota_Start_Period__c + 1), 0 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Quota Periods</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>