force-app/main/default/objects/Quota__c/fields/Quota_July__c.field-meta.xml
<CustomField>
    <fullName>Quota_July__c</fullName>
    <defaultValue>0.00</defaultValue>
    <label>Quota July</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>