force-app/main/default/objects/Quota__c/fields/Quota_Type__c.field-meta.xml
<CustomField>
    <fullName>Quota_Type__c</fullName>
    <label>Quota Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>M1</fullName>
            </value>
            <value>
                <fullName>M3</fullName>
            </value>
            <value>
                <fullName>M5</fullName>
            </value>
            <value>
                <fullName>Cuft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>