force-app/main/default/objects/Quota__c/fields/YTD_Quota_Start_Period__c.field-meta.xml
<CustomField>
    <fullName>YTD_Quota_Start_Period__c</fullName>
    <formula>IF( 

VALUE(TEXT(Effective_Start_Period__c)) &gt; 1, VALUE(TEXT(Effective_Start_Period__c)), 1 

)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YTD Quota Start Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>