force-app/main/default/objects/Quota__c/recordTypes/M1_Quota.recordType-meta.xml
<RecordType>
    <fullName>M1_Quota</fullName>
    <active>true</active>
    <label>M1 Quota</label>
</RecordType>