force-app/main/default/objects/Quota__c/recordTypes/M3_Quota.recordType-meta.xml
<RecordType>
    <fullName>M3_Quota</fullName>
    <active>true</active>
    <label>M3 Quota</label>
</RecordType>