force-app/main/default/objects/Quota__c/validationRules/Enter_a_year_date_for_the_year_field.validationRule-meta.xml
<ValidationRule>
    <fullName>Enter_a_year_date_for_the_year_field</fullName>
    <active>true</active>
    <errorConditionFormula>IF(Value(Year__c)&lt;=1900,true,IF(Value(Year__c) &gt;= 2050,true,false))</errorConditionFormula>
    <errorDisplayField>Year__c</errorDisplayField>
    <errorMessage>Must enter a valid year.</errorMessage>
</ValidationRule>