force-app/main/default/objects/Quota__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Rep__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Num_of_Quota_Periods__c</columns>
    <columns>YTD_Quota_Start_Period__c</columns>
    <columns>YTD_Quota_End_Period__c</columns>
    <columns>YTD_Quota__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>